adding extra two fields

--- a/GROUPPROJRCT/Views/Home/GetAllUserRequests.cshtml
+++ b/GROUPPROJRCT/Views/Home/GetAllUserRequests.cshtml
@@ -38,6 +38,12 @@
         <th>
             Cource
         </th>
+        <th>
+            Job
+        </th>
+        <th>
+            Designation
+        </th>
 
     </tr>
 
@@ -70,6 +76,12 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Cource)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Job)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Designation)
             </td>
         </tr>
     }
