--- a/GROUPPROJRCT/Views/Home/Registration.cshtml
+++ b/GROUPPROJRCT/Views/Home/Registration.cshtml
@@ -55,6 +55,16 @@
             <td>@Html.EditorFor(e => e.Cource)</td>
             <td>@Html.ValidationMessageFor(e => e.Cource)</td>
         </tr>
+        <tr>
+            <td>@Html.LabelFor(e => e.Job)</td>
+            <td>@Html.EditorFor(e => e.Job)</td>
+            <td>@Html.ValidationMessageFor(e => e.Job)</td>
+        </tr>
+        <tr>
+            <td>@Html.LabelFor(e => e.Designation)</td>
+            <td>@Html.EditorFor(e => e.Designation)</td>
+            <td>@Html.ValidationMessageFor(e => e.Designation)</td>
+        </tr>
 
         <tr>
         <tr>
