city feild added

--- a/GROUPPROJRCT/Views/Home/Registration.cshtml
+++ b/GROUPPROJRCT/Views/Home/Registration.cshtml
@@ -65,6 +65,11 @@
             <td>@Html.EditorFor(e => e.Designation)</td>
             <td>@Html.ValidationMessageFor(e => e.Designation)</td>
         </tr>
+        <tr>
+            <td>@Html.LabelFor(e => e.City)</td>
+            <td>@Html.EditorFor(e => e.City)</td>
+            <td>@Html.ValidationMessageFor(e => e.City)</td>
+        </tr>
 
         <tr>
         <tr>
