--- a/GROUPPROJRCT/Views/Home/GetAllUserRequests.cshtml
+++ b/GROUPPROJRCT/Views/Home/GetAllUserRequests.cshtml
@@ -44,6 +44,9 @@
         <th>
             Designation
         </th>
+        <th>
+            City
+        </th>
 
     </tr>
 
@@ -82,6 +85,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Designation)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.City)
             </td>
         </tr>
     }
